--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,8 @@
   <depend>message_filters</depend>
   <depend>Pangolin</depend>
 
+  <exec_depend>ros2launch</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
