--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 project(orbslam3)
 
-# You should set the PYTHONPATH to your own python site-packages path
-set(ENV{PYTHONPATH} "/opt/ros/humble/lib/python3.10/site-packages")
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)
 
 # Default to C++14
@@ -18,31 +15,20 @@ endif()
 # dsiable all warnings
 add_compile_options(-w)
 
-option(USE_LITE "Lite mode without GUI" ON)
-if(USE_LITE)
-  add_definitions(-DLITE)
-endif()
-message("======= IS LITE MODE USED?: " ${USE_LITE})
-
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(message_filters REQUIRED)
 find_package(Sophus REQUIRED)
-find_package(ORB_SLAM3 REQUIRED)
 find_package(Eigen3 REQUIRED)
-
-if(NOT USE_LITE)
-  find_package(Pangolin REQUIRED)
-endif()
+find_package(ORB_SLAM3 REQUIRED)
 
 include_directories(
   include
   ${ORB_SLAM3_ROOT_DIR}
   ${ORB_SLAM3_ROOT_DIR}/include
   ${ORB_SLAM3_ROOT_DIR}/include/CameraModels
-  ${ORB_SLAM3_ROOT_DIR}/Thirdparty/Sophus
   ${EIGEN3_INCLUDE_DIR}
 )
 
@@ -55,48 +41,8 @@ add_executable(mono
   src/monocular/monocular-slam-node.cpp
 )
 
-if(USE_LITE)
-  ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge ORB_SLAM3 OpenCV Eigen3)
-else()
-  ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge ORB_SLAM3 Pangolin OpenCV Eigen3)
-endif()
+ament_target_dependencies(mono rclcpp sensor_msgs cv_bridge ORB_SLAM3 OpenCV Eigen3)
 
-add_executable(rgbd
-  src/rgbd/rgbd.cpp
-  src/rgbd/rgbd-slam-node.cpp
-)
-
-if(USE_LITE)
-  ament_target_dependencies(rgbd rclcpp sensor_msgs cv_bridge message_filters ORB_SLAM3 OpenCV)
-else()
-  ament_target_dependencies(rgbd rclcpp sensor_msgs cv_bridge message_filters ORB_SLAM3 Pangolin OpenCV)
-endif()
-
-add_executable(stereo
-  src/stereo/stereo.cpp
-  src/stereo/stereo-slam-node.cpp
-)
-
-if(USE_LITE)
-  ament_target_dependencies(stereo rclcpp sensor_msgs cv_bridge message_filters ORB_SLAM3 OpenCV Eigen3)
-else()
-  ament_target_dependencies(stereo rclcpp sensor_msgs cv_bridge message_filters ORB_SLAM3 Pangolin OpenCV Eigen3)
-endif()
-
-add_executable(stereo-inertial
-  src/stereo-inertial/stereo-inertial.cpp
-  src/stereo-inertial/stereo-inertial-node.cpp
-)
-if(USE_LITE)
-  ament_target_dependencies(stereo-inertial rclcpp sensor_msgs cv_bridge ORB_SLAM3 OpenCV)
-else()
-  ament_target_dependencies(stereo-inertial rclcpp sensor_msgs cv_bridge ORB_SLAM3 Pangolin OpenCV)
-endif()
-
-install(TARGETS mono rgbd stereo stereo-inertial DESTINATION lib/${PROJECT_NAME})
-
-# Install launch files.
-#install(DIRECTORY launch config vocabulary
-#  DESTINATION share/${PROJECT_NAME}/)
+install(TARGETS mono DESTINATION lib/${PROJECT_NAME})
 
 ament_package()
